--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "تليثون العرب",
+  "name": "تليثون المهيب",
   "description": "تنصيب تليثون العرب الاصلي معرف قناتنا @E999GU",
   "logo": "https://telegra.ph/file/3e89074b8dcd33885a635.jpg",
   "keywords": [    "plugin",    "modular",    "productivity"  ],
